--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,11 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #f8f9fa;
+}
+
+.card-title {
+  font-size: 1rem;
 }
 
 h1 {
